<resources>
    <string name="app_name">Hajdentity writer!</string>
    <string name="optional_default">If you leave optional fields empty, it will default to factory or default key</string>
    <string name="op_keyinput0">Key 0 (Optional)</string>
    <string name="op_keyinput3">Key 3 (Optional)</string>
    <string name="op_keyinput4">Key 4 (Optional)</string>
    <string name="keyinput0">Key 0</string>
    <string name="keyinput3">Key 3</string>
    <string name="keyinput4">Key 4</string>
    <string name="prepare_tv_title">Write the modified Capability Container (CC) to file 1 and the URL template to file 2 on the tag</string>
    <string name="prepare_info">Please note: when a NTAG424DNA tag is tapped to the NFC reader the action runs without any further confirmation.</string>
    <string name="prepare_menu_1">Write the Capability Container and URL template</string>
    <string name="prepare_menu_2">Select the Key Number 4 Source</string>
    <string name="prepare_titlee">Prepare the tag for NDEF operations</string>
    <string name="overview_output">choose an operation …</string>
    <string name="overview_output_layout">operation output</string>
    <string name="overview_tv_menu">Gives an overview about the tag</string>
    <string name="overview_tv_information">Please note: when a NTAG424DNA tag is tapped to the NFC reader the action runs without any further confirmation.</string>
    <string name="overview_tv_menu1_info">Checks Authentication Scheme (AES/LRP), Keys, File Settings</string>
    <string name="overview_tv_title">9 Tag Overview</string>
    <string name="unset_tv_info">Please note: when a NTAG424DNA tag is tapped to the NFC reader the action runs without any further confirmation.</string>
    <string name="unset_tv_title">5 Unset the SUN feature</string>
    <string name="unset_menu1">Write the default Capability Container (CC) to file 1 and clear the file 2 on the tag. Change the application keys to default and unsets any SDM feature.</string>
    <string name="unset_output">choose an operation …</string>
    <string name="unset_output_layout">operation output</string>
    <string name="encrypted_sun_feature">Encrypted SUN Feature</string>
    <string name="write_the_url_template_for_encrypted_sun">Write the URL template for Encrypted SUN</string>
    <string name="write_the_url_template_for_an_encrypted_sun_message_to_file_2_on_the_tag">Write the URL template for an Encrypted SUN Message to file 2 on the tag</string>
    <string name="select_the_output_fields">Select the Output Fields</string>
    <string name="please_note_when_a_ntag424dna_tag_is_tapped_to_the_nfc_reader_the_action_runs_without_any_further_confirmation">Please note: when a NTAG424DNA tag is tapped to the NFC reader the action runs without any further confirmation.</string>
    <string name="choose_an_operation">choose an operation …</string>
    <string name="operation_output">operation output</string>
    <string name="prepare_the_tag_for_ndef_operations">Prepare the tag for NDEF operations</string>
    <string name="main_menu">Main Menu</string>
    <string name="setup_encrypted_sun_message">Setup Encrypted SUN Message</string>
    <string name="tag_overview">Tag Overview</string>
    <string name="gives_an_overview_about_the_tag">Gives an overview about the tag</string>
    <string name="overview_about_the_tag">Overview about the tag</string>
    <string name="unset_the_sdm_feature_fabric_settings">Unset the SDM Feature (fabric settings)</string>
    <string name="write_the_default_capability_container_cc_to_file_1_and_clear_file_2_on_the_tag">Write the default Capability Container (CC) to file 1 and clear file 2 on the tag.</string>
    <string name="unset_the_sun_feature_fabric_settings">Unset the SUN feature (fabric settings)</string>
    <string name="write_the_capability_container_cc_to_file_1_and_an_url_template_to_file_2_on_the_tag">Write the Capability Container (CC) to file 1 and an URL template to file 2 on the tag.</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
</resources>